Bug 90366: XPIDL-Generated code produces preprocessor warnings, removed use of ##. sr=scc, r=jband,jst